argo/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector:
    app: sample-service
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
